# claw-code

./: .gitignore  OLLAMA_IMPLEMENTATION_GUIDE.md  OLLAMA_INTEGRATION.md  ollama_adapter.rs  package-lock.json
rust/: .claw.json  .clawd-todos.json
rust/crates/api/src/: client.rs
rust/crates/api/src/providers/: mod.rs  ollama_adapter.rs  openai_compat.rs
rust/crates/claw-api-server/: Cargo.toml
rust/crates/claw-api-server/src/: error.rs  main.rs  protocol.rs  state.rs
rust/crates/claw-api-server/src/routes/: mod.rs  sessions.rs  websocket.rs
rust/crates/mcp-web/: Cargo.toml
rust/crates/runtime/src/: conversation.rs  lib.rs  session.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/mcp-cli/: Cargo.toml
rust/mcp-cli/src/: backend.rs  config.rs  error.rs  lib.rs  storage.rs
rust/mcp-cli/src/mcp/: client.rs  mod.rs  types.rs
rust/mcp-cli/src/ui/: layout.rs  mod.rs  state.rs  styles.rs
rust/mcp-cli/src/ui/components/: command_palette.rs  messages.rs  mod.rs
rust/ui/: PHASE1-README.md  PHASE2-README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
rust/ui/src/app/: globals.css  layout.tsx  page.tsx
rust/ui/src/components/chat/: message.tsx
rust/ui/src/components/layout/: chat-area.tsx  index.ts  layout.tsx  sidebar.tsx  status-bar.tsx
rust/ui/src/components/ui/: button.tsx  input.tsx  scroll-container.tsx
rust/ui/src/lib/: api.ts  store.ts  store.tsx  types.ts
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatInput.tsx  MessageBubble.tsx  Sidebar.tsx
web/src/lib/: api.ts  protocol.ts  useChat.ts
